--- a/print.css
+++ b/print.css
@@ -1,44 +1,75 @@
 @media print
 {
-    body{background:#FFFFFF url(images/body-bg.gif) top center repeat-y;color:#000000;font:76% tahoma, verdana, sans-serif;}
-    @page {size: landscape}
-    table { page-break-inside:auto; width: 100%; height: 100%;}
-    tr    { page-break-inside:avoid; page-break-after:auto }
-    thead { display:table-header-group }
-    tfoot { display:table-footer-group }
-    .noPrint { display: none; }
+    body{
+    	background: #FFFFFF url(images/body-bg.gif) top center repeat-y;
+    	color: #000000;
+    	font: 50% tahoma, verdana, sans-serif;
+    }
+
+    @page {
+    	size: landscape
+    }
+
+    table {
+    	page-break-inside: auto;
+    	width: 100%;
+    }
+
+    tr    {
+    	page-break-inside: avoid;
+    	page-break-after: auto
+    }
+
+    thead {
+    	display: table-header-group
+    }
+
+    tfoot {
+    	display: table-footer-group
+    }
+
+    .noPrint {
+    	display: none;
+    }
+
     .landscape { 
-    width: 100%; 
-    height: 100%; 
-    margin: 0% 0% 0% 0%; filter: progid:DXImageTransform.Microsoft.BasicImage(Rotation=1); 
-} 
-table.sample {
-        page-break-inside:auto
-	border-width: thin;
-	border-spacing: 0px;
-	border-style: outset;
-	border-color: #000000;
-	border-collapse: collapse;
-	background-color: #FFFFFF;
+	    width: 100%; 
+	    height: 100%; 
+	    margin: 0% 0% 0% 0%;
+	    filter: progid:DXImageTransform.Microsoft.BasicImage(Rotation=1); 
+	} 
 
-}
-table.sample tr { page-break-inside:avoid; page-break-after:auto }
+	table.sample {
+	    page-break-inside: auto;
+		border-width: thin;
+		border-spacing: 0px;
+		border-style: outset;
+		border-color: #000000;
+		border-collapse: collapse;
+		background-color: #FFFFFF;
+		font-size: 72%;
+	}
 
-table.sample th {
-	border-width: thin;
-	padding: 3px;
-	border-style: inset;
-	border-color: #000000;
-	background-color: #FFFFFF;
-	-moz-border-radius: ;
-}
-table.sample td {
-	border-width: thin;
-	padding: 3px;
-	border-style: inset;
-	border-color: #000000;
-	background-color: #FFFFFF;
-	-moz-border-radius: ;
-}
+	table.sample tr {
+		page-break-inside: avoid;
+		page-break-after: auto;
+	}
+
+	table.sample th {
+		border-width: thin;
+		padding: 3px;
+		border-style: inset;
+		border-color: #000000;
+		background-color: #FFFFFF;
+		-moz-border-radius: ;
+	}
+	table.sample td {
+		border-width: thin;
+		padding: 3px;
+		border-style: inset;
+		border-color: #000000;
+		background-color: #FFFFFF;
+		-moz-border-radius: ;
+	}
 }
 
